@@ -1,7 +1,7 @@
 Package: SSDM
 Type: Package
 Title: Stacked Species Distribution Modelling
-Version: 0.1.9011
+Version: 0.1.9012
 Date: 2015-11-02
 Author: Sylvain Schmitt, Robin Pouteau, Dimitri Justeau, Philippe Birnbaum
 Maintainer: Sylvain Schmitt <sylvain.schmitt@agroparistech.fr>
@@ -17,6 +17,7 @@ Description: SSDM is a package to map species richness and endemism based on
 License: GPL (>=3) | file LICENSE
 LazyData: TRUE
 Imports:
+    parallel (>= 3.2.2),
     sp (>= 1.2.0),
     raster (>= 2.4.20),
     methods (>= 3.2.2),
@@ -33,7 +34,7 @@ Imports:
     shinydashboard (>= 0.5.1),
     shinyFiles (>= 0.6.0),
     gplots (>= 0.1.0),
-    spThin
+    spThin (>= 0.1.0)
 Depends:
     R (>= 3.2.2)
 Collate:
