@@ -33,6 +33,7 @@ importFrom(gplots,heatmap.2)
 importFrom(mgcv,gam)
 importFrom(mgcv,gam.control)
 importFrom(nnet,nnet)
+importFrom(parallel,mclapply)
 importFrom(randomForest,randomForest)
 importFrom(raster,aggregate)
 importFrom(raster,as.factor)
